# Disk-Cache-Attacks

./: .gitignore  LICENSE  README.md
covert_channel/: CMakeLists.txt  README  evaluate.py
covert_channel/src/: CMakeLists.txt  config.h  config_default.h  config_template.h  main.c
evict_and_check/: CMakeLists.txt  build.sh  parameter_search.py  run_evaluation.py
evict_and_check/src/: CMakeLists.txt  config.h  config_default.h  config_template.h  main.c
libs/cmdline/: CMakeLists.txt
libs/cmdline/src/: cmdline.c
libs/debug/src/: debug.h
libs/dynarray/: CMakeLists.txt
libs/dynarray/src/: CMakeLists.txt  dynarray.c  dynarray.h
libs/dynarray/src/tests/dynarray_basic/: CMakeLists.txt  test_dynarray_basic.c
libs/fca/: CMakeLists.txt  fca.c  fca.h  osal.h
libs/fca/src/: CMakeLists.txt  fca.c  fca.h  osal.h
libs/filemap/: CMakeLists.txt
libs/filemap/src/: CMakeLists.txt  filemap.c  filemap.h
libs/hashmap/: CMakeLists.txt
libs/hashmap/src/: CMakeLists.txt  hashmap.c  hashmap.h
libs/hashmap/src/tests/: CMakeLists.txt
libs/hashmap/src/tests/hashmap_basic/: CMakeLists.txt  test_hashmap_basic.c
libs/list/: CMakeLists.txt
libs/list/src/: CMakeLists.txt  list.c  list.h
libs/list/src/tests/list_basic/: test_list_basic.c
libs/osal/src/: osal.h
libs/pca/: osal.h  pca.c  pca.h
libs/tsc_bench/: CMakeLists.txt
libs/tsc_bench/src/: CMakeLists.txt  tsc_bench.c  tsc_bench.h
linux/: implementation
linux/covert_channel/eviction/: CMakeLists.txt
linux/covert_channel/eviction/src/: CMakeLists.txt  config.h  main.c
linux/covert_channel/no_eviction/: CMakeLists.txt
linux/covert_channel/no_eviction/src/: CMakeLists.txt  main.c
linux/evict_and_check/: CMakeLists.txt  build.sh  parameter_search.py  run_evaluation.py
linux/evict_and_check/src/: CMakeLists.txt  config.h  config_default.h  config_template.h  main.c
linux/evict_and_check/src/util/: CMakeLists.txt
linux/evict_and_check/src/util/cmdline/: CMakeLists.txt  cmdline.h
linux/evict_and_check/src/util/cmdline/tests/: CMakeLists.txt
linux/evict_and_check/src/util/cmdline/tests/cmdline_basic/: CMakeLists.txt  test_cmdline_basic.c
linux/evict_and_check/src/util/dynarray/: CMakeLists.txt  dynarray.c  dynarray.h
linux/evict_and_check/src/util/dynarray/tests/dynarray_basic/: CMakeLists.txt  test_dynarray_basic.c
linux/evict_and_check/src/util/list/: CMakeLists.txt  list.c  list.h
linux/evict_and_check/src/util/list/tests/list_basic/: CMakeLists.txt  test_list_basic.c
linux/evict_and_check/src/util/pageflags/: CMakeLists.txt  pageflags.h
linux/evict_and_check/src/util/tests/: CMakeLists.txt
linux/evict_and_check/src/util/tests/dynarray/: CMakeLists.txt  test_dynarray.c
linux/evict_and_check/src/util/tests/list/: CMakeLists.txt  test_list.c
linux/experiments/access_pageflags/access/: CMakeLists.txt
linux/experiments/access_pageflags/access/src/: CMakeLists.txt  access.c
linux/experiments/chrome/: evaluate.py  index.html
linux/experiments/fake_dd/: CMakeLists.txt
linux/experiments/fake_dd/src/: CMakeLists.txt  fake_dd.c
linux/experiments/firefox/password_form/: index.html
linux/experiments/mincore_granularity/: CMakeLists.txt  mu_sigma.py  statistics_tsc.txt
linux/experiments/mincore_granularity/src/: CMakeLists.txt  mincore_granularity.c
linux/experiments/mm_pra_evaluation/: collect.sh
linux/experiments/mm_pra_evaluation/experiments/: CMakeLists.txt
linux/experiments/mm_pra_evaluation/experiments/src/: CMakeLists.txt  experiments.c
linux/experiments/mm_pra_evaluation/v5.1.21/: collect.sh  process.py  run_access.sh  test.sh
linux/experiments/mm_pra_evaluation/v5.1.21/debuginfo/: struct_address_space.txt  struct_page.txt  struct_qstr.txt
linux/experiments/mm_pra_evaluation/v5.1.21/pc_evicted_pages/: collect.sh  process.py  run_access.sh
linux/experiments/mm_pra_evaluation/validator/: CMakeLists.txt
linux/experiments/monitor/: CMakeLists.txt
linux/experiments/monitor/src/: CMakeLists.txt  monitor.c
linux/experiments/pageflags/: CMakeLists.txt  add_probe.sh  collect.sh
linux/experiments/pageflags/src/: CMakeLists.txt  pageflags.c
linux/experiments/pagestate/: CMakeLists.txt
linux/experiments/pagestate/src/: CMakeLists.txt  pagestate.c
linux/experiments/qemu/: NOTES  exceptions  exceptions.c  notes_cross_vm_covert  qemu_symbols.txt
linux/experiments/qemu/cloud_images/: notes
linux/experiments/time_measurements/: CMakeLists.txt  ryzen_max_freq.sh  statistics_clockgettime.txt
linux/experiments/time_measurements/src/: CMakeLists.txt  time_measurements.c
linux/libs/cmdline/: CMakeLists.txt
linux/libs/cmdline/src/: CMakeLists.txt
linux/libs/dynarray/: CMakeLists.txt
linux/libs/dynarray/src/: dynarray.h
linux/libs/filemap/: CMakeLists.txt
linux/libs/filemap/src/: filemap.c  filemap.h
linux/libs/list/: CMakeLists.txt
linux/libs/pageflags/: CMakeLists.txt
linux/libs/pageflags/src/: CMakeLists.txt  pageflags.c  pageflags.h
linux/libs/tsc_bench/: CMakeLists.txt
linux/libs/tsc_bench/src/tests/basic/: CMakeLists.txt  test.c
linux/libs/tsc_freq_khz-master/: tsc_freq_khz.c.234r.expand
linux/tools/access/: CMakeLists.txt
linux/tools/access/src/: CMakeLists.txt  access  access.c
linux/tools/cacheinspector/: CMakeLists.txt
linux/tools/cacheinspector/src/: CMakeLists.txt  cacheinspector.c
linux/tools/touchadvise/: CMakeLists.txt
linux/tools/touchadvise/src/: CMakeLists.txt  touchadvise.c
linux/tools/vmtools/: mapinfo.py  pagemapreader.py  process_event_pc_profiler.py  prof.profile  profile_lib_pages.py  qemupagereader.py  search_mem.py  search_mem_pages.py  sratchpad.py  vmtools.py
tools/access/: CMakeLists.txt
tools/access/src/: access.c
windows/covert_channel/: CMakeLists.txt  main.c
windows/evict_and_check/mem_pressure/evict_and_check/: CMakeLists.txt  main.c
windows/evict_and_check/no_mem_pressure/evict_and_check/: CMakeLists.txt  main.c
windows/experiments/mm_pra_evaluation/experiments/: CMakeLists.txt  observations
windows/poc/: poc_dll.c  poc_dll.h  poc_win_dll.c
(+24 files in other folders)
